Git Tests/force-app/main/default/default/objects/DocumentosRegulatorios__c/DocumentosRegulatorios__c.object-meta.xml
<CustomObject>
    <label>Documento regulatório</label>
    <nameField>
        <label>Nome do documento</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Documentos regulatórios</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>